feat: add librarians
